Get rid of unnecessary expansion